public class RawIngredientHandler : IngredientHandler
{
}