public interface IPlatePlaceable
{
    public bool PlaceOnPlate();
}