public class PreparedIngredientHandler : IngredientHandler, IPlatePlaceable
{
    public bool PlaceOnPlate()
    {
        throw new System.NotImplementedException();
    }
}