public interface IHandHoldable
{
    // public bool HoldInHand();
}