public interface ITableInteractable
{
}